# AoC

./: .gitignore
2020/: 2020.sln  Days.sln
2020/Day09/: Program.cs  Xmas.cs
2020/Day10/: Program.cs
2020/Day11/: Program.cs
2020/Day16/: Program.cs  TicRule.cs  Ticket.cs  TicketValidator.cs
2020/Day17/: ActiveReac.cs  Simulator4dHs.cs
2020/Day18/: CalculationParser.cs  Program.cs  UltimateParser.cs
2020HK/01/: 1.hi
2020HK/02/: 2.hi  2.hs
2020HK/04/: 4.hi
2020HK/05/: 5.hs
2020HK/06/: 6.hs
2020HK/07/: 7.hi  7.hs
2020HK/08/: 8.hs
2020HK/09_17/: 17.hi  17.hs  17_v2.hi  17_v2.hs
2020HK/1/: 1.hs
2020HK/10_09/: 09.hi  09.hs
2020HK/11_10/: 10.hi  10.hs
2020HK/11_16/: 16.hi  16.hs
2020HK/3/: 3.hi  3.hs
2020HK/4/: 4.hs
2020HK/5/: 5.hi
2020HK/6/: 6.hi  6.hs
2020HK/8/: 8.hi
2020HK/Test/: Test.hi  Test.hs  Test2.hi  Test2.hs  Test3.hi  Test3.hs  Test4.hi  Test4.hs  in
2022/: 2022.sln
2022/Day01/: Day01.sln  Program.cs
2022/Day02/: Program.cs  RrcRount.cs
2022/Day02V02/: Program.cs  Rps1.cs  Rps2.cs  RpsBase.cs
2022/Day03/: Bag.cs  Program.cs
2022/Day04/: Assignment.cs  Program.cs
2022/Day05/: CraneField.cs  Program.cs
2022/Day06/: Program.cs  StreamProcessor.cs
2022/Day07/: NodeBase.cs  NodeDir.cs  NodeFile.cs  Program.cs
2022/Day08/: Program.cs  TreeMap.cs
2022/Day09/: HeadTailSimulator.cs  Program.cs  SnakeSimulator.cs
2022/Day10/: Program.cs  Simulator.cs
2023/: 2023.sln  CMakeLists.txt
2023/Day24V2/: CMakeLists.txt  Day24V2.cpp  Day24V2.h
2024/: 2024.sln
2025/: 2025.slnx
AOC/: AOC.sln
(+329 files in other folders)
